19.08.2001	<mschimek@users.sf.net>

        * common/errstr.*: Added. libvbi/export and v4lx first victims.
	* zvbi.c: page event change broke TTX subtitles, fixed.

18.08.2001	<mschimek@users.sf.net>

        * libvbi.h, packet.c: Modified & enhanced TTX page event.
        * vbi_format_page bugs: Not pg->row = display_rows; Wrote
	  glyph 0 instead of 0x20 in 41st column; Didn't write spacing
	  attr double height lower row, probable cause of the
	  vbi_fetch_vt_page segv.
	* po: Added emacs coding hints. How's this coded btw?

18.08.2001	pl translation <garetxe@users.sf.net>

	* pl.po: Commited pl translation, contributed by Paweł Sakowski.
		 Thanks!
	* zmisc.c: Fixed button hor/vert aligning in toolbars when the
	orientation changes. Left the '<[Subpage]>' group always
	horizontal because it made more sense.
	* zvbi.c, v4linterface.c: Called vbi_channel_switched when
	changing inputs, standards or channels.

17.08.2001	many channels <garetxe@users.sf.net>

	* v4linterface: create submenus as needed when there are many
	channels, add inputs and standards to the context menu.

16.08.2001	fixes <garetxe@users.sf.net>

	* zvbi.c: Reduced the number of fetch_page calls. Better now?
	  (mhs: Z still calls fetch for notify_clients/rolling_header
	   even in pure capture mode. Purpose?)
	* vbi_fetch_vt_page: Added memset(pg, 0, sizeof(*pg)), otherwise
	segfault when drawing the page if pg is initially bogus data.
	* capture.c: Fixes, but mc still breaks the mpeg plugin. Spent the
	whole day tracking this down, nothing so far :-(

16.08.2001	Zapzilla gui <mschimek@users.sf.net>

	* ttxview.c: Removed export dir field, Zapzilla now
	  remembers the path last entered. z_build_path is
	  applied to the entered path, not exportdir. Made the
	  file entry "electric", ie. the proposed file name is
	  automagically appended.
	* search.c, ttxview.c: Added regular expression option.

16.08.2001	libvbi et al <mschimek@users.sf.net>
